--- a/opdracht-2/styles.css
+++ b/opdracht-2/styles.css
@@ -3,3 +3,68 @@
 ========================================================= */
 
 /* Schrijf hier  jouw CSS! */
+/*opdracht2.1*/
+.one {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+/*opdracht2.2*/
+.two {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/*opdracht 2.3*/
+.three {
+    display: flex;
+    flex-direction: row;
+    /*align-content: start;*/
+    /*align-content: center;*/
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-items: start;
+    align-items: start;
+    gap: 100px;
+
+}
+
+.edhub {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+/*opdracht 2.4*/
+.four {
+    display: flex;
+    justify-content: center;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Opdracht 2.5*/
+.five {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+article {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 360px
+}
